update exercise solutions using new features in Java 10-17